Fix typing error on the home page

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,10 +57,8 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   condition: succeeded()
-  trigger:
-  branches:
-    include:
-    - '*'     # build all branches
-  paths:
-    exclude:
-    - docs/*  # exclude the docs folder
+resources:
+  pipelines:
+  - pipeline: securitylib
+    source: security-lib-ci
+
